<resources>
    <string name="app_name">王幼虎</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">编辑个性签名</string>
    <string name="nav_header_subtitle">中国北京市</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">王幼虎喜欢猫</string>
    <string name="more_icon_1">加好友</string>
    <string name="more_icon_2">扫一扫</string>
    <string name="more_icon_3">收付款</string>
    <string name="more_icon_4">帮助与反馈</string>
    <string name="login_button_string">登陆</string>
    <string name="login_number_string">账号</string>
    <string name="login_key_string">密码</string>
    <string name="login_forget_key_string">忘记密码？</string>
    <string name="login_new_user_string">注册新用户</string>
    <string name="login_new_user_service_book_string">服务条款</string>


    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>



    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限 得到手机账户信息</string>

    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限 读取电话列表</string>

    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限 打电话权限</string>

    <string name="permission_camera_hint">没有使用摄像头权限，无法开启这个功能，请开启权限 摄像权限</string>

    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限 获得精确位置权限</string>

    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限 获得大概位置权限</string>

    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限 读取外部存储权限</string>

    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限 写入外部存储权限</string>

    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限  录制音频权限</string>
    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>

        <item>@string/permission_get_accounts_hint</item>

        <item>@string/permission_read_phone_hint</item>

        <item>@string/permission_call_phone_hint</item>

        <item>@string/permission_camera_hint</item>

        <item>@string/permission_access_fine_location_hint</item>

        <item>@string/permission_access_coarse_location_hint</item>

        <item>@string/permission_read_external_hint</item>

        <item>@string/permission_white_external_hint</item>

    </string-array>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
