<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center">
        <ImageView
            android:id="@+id/more_logo_id_menu_icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:srcCompat="@mipmap/more_icon_menu_icon" />
        <Button
            android:id="@+id/more_logo_id_menu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/more_icon_1" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:clickable="true"
        android:background="@color/white"
        android:gravity="center">
        <ImageView
            android:id="@+id/more_logo_id_menu_icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:srcCompat="@mipmap/more_icon_menu_icon" />
        <Button
            android:id="@+id/more_logo_id_menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/more_icon_2" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:clickable="true"
        android:background="@color/white"
        android:gravity="center">
        <ImageView
            android:id="@+id/more_logo_id_menu_icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:srcCompat="@mipmap/more_icon_menu_icon" />
        <Button
            android:id="@+id/more_logo_id_menu3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/white"
            android:text="@string/more_icon_3" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:clickable="true"
        android:gravity="center">
        <ImageView
            android:id="@+id/more_logo_id_menu_icon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:srcCompat="@mipmap/more_icon_menu_icon" />

        <Button
            android:id="@+id/more_logo_id_menu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/more_icon_4" />

    </LinearLayout>
</LinearLayout>
